# Compiler-optimizations

./: .gitignore  README.md
Craftting_Compilers/: README.md
IRGuard/: .gitignore  CMakeLists.txt  LICENSE  README.md
IRGuard/examples/: vulnerable.c
IRGuard/src/: IRGuard.cpp
MLIR/mlir-learning-pack/: .gitignore  README.md
MLIR/mlir-learning-pack/docs/: CONCEPTS.md
MLIR/mlir-learning-pack/examples/: 00_minimal_module.mlir  01_arith_and_func.mlir  02_generic_form_and_attrs.mlir  03_cf_blocks_and_block_args.mlir  04_scf_if_for.mlir  05_memref_alloc_load_store.mlir  06_affine_matrix_add.mlir  07_scf_reduce_memref.mlir  08_tensor_extract_insert.mlir  09_linalg_generic_add.mlir  10_linalg_matmul.mlir  11_vector_basics.mlir  12_math_pow.mlir  13_saxpy_scf_memref.mlir  14_tiled_matmul_scf.mlir  15_mixed_tensor_linalg_pipeline.mlir  16_lowering_notes.mlir
MLIR/mlir-learning-pack/pow/: pow_01_canonicalize_cse_input.mlir  pow_01_expected_after.mlir  pow_02_loop_invariant_input.mlir  pow_02_solution_notes.md  pow_03_tile_and_vectorize_challenge.mlir
MLIR/mlir-learning-pack/scripts/: check-syntax.sh
Writing LLVM Pass/: CMakeLists.txt  README.md  optimized.ll  run_passes.cpp  test1.ll
Writing LLVM Pass/passes/: CSE.cpp  ConstantPropagation.cpp  DeadCodeElimination.cpp  LoopInvariantCodeMotion.cpp
Writing LLVM Pass/test_programs/: test1.c
